[metadata]
name = titlecase
author = Stuart Colville
maintainer = Pat Pannuto
maintainer_email = pat.pannuto+titlecase@gmail.com
description = Python Port of John Gruber's titlecase.pl
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ppannuto/python-titlecase
project_urls =
    PyPI = https://pypi.org/project/titlecase/
    conda-forge = https://anaconda.org/conda-forge/titlecase
    Source Code = https://github.com/ppannuto/python-titlecase
    Bug Tracker = https://github.com/ppannuto/python-titlecase/issues

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Text Processing :: Filters
license = MIT
license_files = [LICENSE.txt]
keyword =
    string formatting

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.extras_require]
regex =
    regex >=2020.4.4

[options.entry_points]
console_scripts =
    titlecase = titlecase.__init__:cmd

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel
